chnage degisn of horizontal navbar partial view Imported from Changeset 2389

--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -1707,7 +1707,7 @@ header {
 
 .headerMenu {
     background-color: #000000;
-    padding: 15px;
+    padding: 5px 15px 5px 15px;
     width: 100%;
     margin-right: unset;
     margin-left: unset;
@@ -3589,11 +3589,6 @@ footer #contact li {
         margin-top: 4px;
         padding: 0;
     }
-
-    .headerMenu {
-        display: none;
-    }
-
     .horizontal-menu {
         padding: 15px;
     }
